<resources>
    <string name="app_name">HelloAndroidWithLogin</string>
    <string name="username_string">Kullanıcı Adı</string>
    <string name="password_string">Şifre</string>
    <string name="enter_username_hint">Kullanıcı adını giriniz</string>
    <string name="enter_password_hint">Şifrenizi giriniz</string>
    <string name="login_string">Giriş</string>
    <string name="hello">Hello</string>
    <string name="send_to">To: </string>
    <string name="subject">Konu: </string>
    <string name="send">Gönder</string>
    <string name="attachment">Ekle</string>

    <string name="email_send">Mail</string>
    <string name="Settings">Personel Bilgisi</string>
    <string name="user_list">KUllanıcılar</string>
    <string name="sensors">Sensorler</string>

    <string name="personelInfo">Personel Info</string>
    <string name="appMode">Application Mode</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="gender1">Male</string>
    <string name="gender2">Female</string>
    <string name="age">Age</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="screenMode">ScreenMode</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="users">users</string>
</resources>
